# crafter-llm-player

./: pyproject.toml
src/: fileLoader.py
src/StatusDescriptor/: StatusDescriptor.py  configs.yaml  digitSliceRecognizer.pth  digitSliceRecognizer.py  playWindowSlicer.py  sliceReader.py  validators.py
test/StatusDescriptor/: configForTerrain.yaml  configs.yaml  conftest.py  test_descrpitionSerializer.py  test_playWindowSlicer.py  test_sliceReader.py
